--- a/meta/main.yml
+++ b/meta/main.yml
@@ -47,7 +47,7 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - 16.04
+    - xenial
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
