ubuntu-docker: specify docker-compose version to 1.21.2

--- a/ubuntu-docker/tasks/main.yml
+++ b/ubuntu-docker/tasks/main.yml
@@ -24,4 +24,6 @@
   apt: name=python-pip
 
 - name: install docker-compose package using pip
-  pip: name=docker-compose
+  pip:
+    name: docker-compose
+    version: 1.21.2
